welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:3: error: not found: value a
    if(die1==die2){return ((a+b)%6+1)*2}
                            ^withoutDoubles:3: error: not found: value b
    if(die1==die2){return ((a+b)%6+1)*2}
                              ^withoutDoubles:4: error: not found: value a
    else{return a+b}
                ^withoutDoubles:4: error: not found: value b
    else{return a+b}
                  ^withoutDoubles:6: error: not found: value a
  else{return a+b}
              ^withoutDoubles:6: error: not found: value b
  else{return a+b}
                ^