welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.code
def withoutDoubles(die1:Int, die2:Int, noDoubles:Boolean):Int = {
  if(noDoubles){
    if(die1==die2){return ((a+b)%6+1)*2}
    else{return a+b}
  }
  else{return a+b}
}